fix: Resolved overflow issues

--- a/FRONT/style.css
+++ b/FRONT/style.css
@@ -1819,7 +1819,7 @@ footer {
 
 #hi h1 {
     border-bottom: 1px solid var(--accentColor1);
-    font-size: 3rem;
+    font-size: 3.2rem;
     font-weight: bold;
     max-width: 768px;
     margin: auto;
@@ -1916,6 +1916,16 @@ td button {
     cursor: pointer;
 }
 
+::-webkit-scrollbar:horizontal {
+    height: 6px;
+    width: 6px;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+    height: 6px;
+    width: 6px;
+}
+
 ::-webkit-scrollbar {
     width: 6px;
 }
@@ -1971,7 +1981,7 @@ td button {
 }
 
 #complexRenovations h2 {
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 .box {
@@ -2053,6 +2063,10 @@ td button {
     font-weight: 200;
 }
 
+#transfers h3 {
+    font-size: 1.8rem;
+}
+
 /* Ingredients */
 
 #createDrugPrompt h3,
@@ -2083,6 +2097,11 @@ td button {
     margin-right: 25px;
 }
 
+#ingredientsStyle {
+    font-size: 1.8rem;
+    margin-bottom: 0 !important;
+}
+
 /* Polls */
 
 #polls {
@@ -2092,7 +2111,8 @@ td button {
 
 #polls h1 {
     text-align: center;
-    font-size: 3rem;
+    font-size: 2.8rem;
+    margin-bottom: 5vh;
 }
 
 #polls h2 {
@@ -2121,6 +2141,7 @@ td button {
     margin: 10vh auto;
 }
 
+/* Header */
 @media (max-width:1880px) {
 
     #filters div {
@@ -2184,21 +2205,11 @@ td button {
         gap: 2rem;
     }
 
-}
-
-@media (max-width:1280px) {
-
-    #ifDevide form,
-    #ifMerge form {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        gap: 1rem;
+    #hospitalPolls,
+    #doctorPolls {
+        gap: 50px;
     }
 
-    #ifDevide,
-    #ifMerge {
-        width: 90%;
-        margin: 2vh auto;
-    }
 }
 
 @media (max-width:1280px) {
@@ -2208,9 +2219,14 @@ td button {
         grid-template-columns: 1fr 1fr;
         gap: 2rem;
     }
+
+    #ifDevide,
+    #ifMerge {
+        width: 90%;
+        margin: 2vh auto;
+    }
 }
 
-/* Header */
 @media (max-width:1069px) {
 
     .myForm input,
@@ -2329,6 +2345,29 @@ td button {
         flex-direction: column;
         gap: 1.8rem;
     }
+
+    #polls {
+        max-width: 90%;
+    }
+
+    #polls h1 {
+        font-size: 2rem;
+        margin-bottom: 4vh;
+    }
+
+    #polls h2 {
+        font-size: 1.6rem;
+    }
+
+    #hospitalPolls,
+    #doctorPolls {
+        gap: 20px;
+    }
+
+    #hPolls,
+    #dPolls {
+        width: 100%;
+    }
 }
 
 @media (max-width:768px) {
@@ -2437,6 +2476,17 @@ td button {
         margin-left: 45px;
     }
 
+    #polls h1 {
+        font-size: 1.6rem;
+        margin-bottom: 3vh;
+    }
+
+    #hospitalPolls,
+    #doctorPolls {
+        grid-template-columns: 1fr;
+        grid-gap: 50px;
+    }
+
 }
 
 @media (max-width:500px) {
@@ -2469,5 +2519,9 @@ td button {
     td {
         font-size: 0.8rem;
         padding: 0.8rem;
+    }
+
+    #polls h1 {
+        font-size: 1.4rem;
     }
 }
